--- a/src/app/dialogs/add-ingredient/add-ingredient.component.html
+++ b/src/app/dialogs/add-ingredient/add-ingredient.component.html
@@ -1,52 +1,63 @@
-<div style="max-height: 80vh;overflow: auto;">
-  <h1 mat-dialog-title>ເພີ່ມວັດຖຸດິບ</h1>
-  <form [formGroup]="ingredientForm">
-    <div class="form-group">
-      <label for="ingredientName">ວັດຖຸດິບ</label>
-      <input type="text" class="form-control" id="ingredientName" formControlName="ingredientName" required>
-    </div>
-    <div class="form-group">
-      <label for="ingredientTypeId">ປະເພດ</label>
-      <select class="form-control" id="ingredientTypeId" formControlName="ingredientTypeId" required>
-        <option value="">-- Choose --</option>
-        <option value="{{ t.id }}" *ngFor="let t of ingredientTypes">{{ t.ingredientTypeName }}</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="unitId">ຫົວໜ່ວຍ</label>
-      <select class="form-control" id="unitId" formControlName="unitId" required>
-        <option value="">-- Choose --</option>
-        <option value="{{ t.id }}" *ngFor="let t of units">{{ t.unit_name }}</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="unitPrice">ລາຄາຕໍ່ໜ່ວຍ</label>
-      <input type="number" class="form-control text-right" id="unitPrice" formControlName="unitPrice" required>
-    </div>
-    <div class="form-group">
-      <label for="quantityPerUnit">ຈຳນວນຕໍ່ໜ່ວຍ</label>
-      <input type="number" class="form-control text-right" id="quantityPerUnit" formControlName="quantityPerUnit"
-        required>
-    </div>
-    <div class="form-group">
-      <label for="unitPerPack">ຈຳນວນຕໍ່ແກັດ</label>
-      <input type="number" class="form-control text-right" id="unitPerPack" formControlName="unitPerPack" required>
-    </div>
-    <div class="form-group">
-      <label for="packPrice">ລາຄາຕໍ່ແກັດ</label>
-      <input type="number" class="form-control text-right" id="packPrice" formControlName="packPrice" required>
-    </div>
-    <div class="form-group">
-      <label for="supplierId">ຊື້ຈາກ</label>
-      <select class="form-control" id="supplierId" formControlName="supplierId" required>
-        <option value="">-- Choose --</option>
-        <option value="{{ t.id }}" *ngFor="let t of vendors">{{ t.vendorName }}</option>
-      </select>
-    </div>
-    <hr>
+<div class="row" style="max-height: 80vh;overflow: auto;">
+  <div class="col col-md-12">
+    <h1 mat-dialog-title>ເພີ່ມວັດຖຸດິບ</h1>
+    <form [formGroup]=" ingredientForm">
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="ingredientName">ວັດຖຸດິບ</label>
+          <input type="text" class="form-control" id="ingredientName" formControlName="ingredientName" required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="ingredientTypeId">ປະເພດ</label>
+          <select class="form-control" id="ingredientTypeId" formControlName="ingredientTypeId" required>
+            <option value="" disabled>-- Choose --</option>
+            <option value="{{ t.id }}" *ngFor="let t of ingredientTypes">{{ t.ingredientTypeName }}</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="unitId">ຫົວໜ່ວຍ</label>
+          <select class="form-control" id="unitId" formControlName="unitId" required>
+            <option value="">-- Choose --</option>
+            <option value="{{ t.id }}" *ngFor="let t of units">{{ t.unit_name }}</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="unitPrice">ລາຄາຕໍ່ໜ່ວຍ</label>
+          <input type="number" class="form-control text-right" id="unitPrice" formControlName="unitPrice" required>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col col-md-6">
+          <label for="quantityPerUnit">ຈຳນວນຕໍ່ໜ່ວຍ</label>
+          <input type="number" class="form-control text-right" id="quantityPerUnit" formControlName="quantityPerUnit"
+            required>
+        </div>
+        <div class="form-group col col-md-6">
+          <label for="unitPerPack">ຈຳນວນຕໍ່ແກັດ</label>
+          <input type="number" class="form-control text-right" id="unitPerPack" formControlName="unitPerPack" required>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col col-md-6">
+          <label for="packPrice">ລາຄາຕໍ່ແກັດ</label>
+          <input type="number" class="form-control text-right" id="packPrice" formControlName="packPrice" required>
+        </div>
+        <div class="form-group col col-md-6">
+          <label for="supplierId">ຊື້ຈາກ</label>
+          <select class="form-control" id="supplierId" formControlName="supplierId" required>
+            <option value="" disabled>-- Choose --</option>
+            <option value="{{ t.id }}" *ngFor="let t of vendors">{{ t.vendorName }}</option>
+          </select>
+        </div>
+      </div>
+      <hr>
+    </form>
     <div class="col col-md-12 text-right">
-      <button mat-flat-button color="primary" [disabled]="disabledBtn" style="background-color: #00BFA5;width: 100px;"
-        (click)="createIngredient()">ບັນທຶກ</button>
+      <button mat-flat-button color="primary" class="mb-1" [disabled]="disabledBtn"
+        style="background-color: #00BFA5;width: 100px;" (click)="createIngredient()">ບັນທຶກ</button>
     </div>
-  </form>
+  </div>
 </div>
