--- a/src/app/dialogs/add-recipe/add-recipe.component.html
+++ b/src/app/dialogs/add-recipe/add-recipe.component.html
@@ -4,11 +4,12 @@
     <div class="form-row">
       <div class="form-group col-md-4">
         <label class="foodIdType">ປະເພດອາຫານ</label>
-        <select class="form-control" id="foodIdType" [(ngModel)]="foodType">
+        <select class="form-control" id="foodIdType" [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}">
           <option value="" disabled>-- Choose --</option>
           <option value="{{ ft.id }}" *ngFor="let ft of foodTypes">{{ ft.foodTypeName }}</option>
         </select>
       </div>
+
       <div class="form-group col-md-4">
         <label class="foodId">ອາຫານ</label>
         <select class="form-control" id="foodId" formControlName="foodId">
@@ -31,9 +32,11 @@
           <option value="{{ i.id }}" *ngFor="let i of ingredients">{{ i.ingredientName }}</option>
         </select>
       </div>
+
       <div class="form-group col-md-4">
         <label class="quantity">ຈຳນວນ</label>
-        <input type="number" class="form-control text-right" id="quantity" formControlName="quantity"> </div>
+        <input type="number" class="form-control text-right" id="quantity" formControlName="quantity">
+      </div>
     </div>
   </div>
 </form>
