--- a/src/app/dialogs/add-recipe/add-recipe.component.html
+++ b/src/app/dialogs/add-recipe/add-recipe.component.html
@@ -37,6 +37,21 @@
         <label class="quantity">ຈຳນວນ</label>
         <input type="number" class="form-control text-right" id="quantity" formControlName="quantity">
       </div>
+      <div class="form-group col-md-4">
+        <button mat-flat-button color="primary" class="mt-4"
+          style="width: 80px;position: relative;top:8px;">Add</button>
+      </div>
     </div>
   </div>
 </form>
+<hr>
+<div class="table-responsive">
+  <table class="table table-bordered table-hover">
+    <thead class="thead-dark">
+      <th scope="col" class="text-center">#</th>
+      <th scope="col" class="text-left">ສ່ວນປະກອບ</th>
+      <th scope="col" class="text-center">ຈຳນວນ</th>
+      <th scope="col" class="text-left">ໝາຍເຫດ</th>
+    </thead>
+  </table>
+</div>
