--- a/src/app/dialogs/ingredient-take-in/ingredient-take-in.component.html
+++ b/src/app/dialogs/ingredient-take-in/ingredient-take-in.component.html
@@ -13,7 +13,8 @@
     </div>
     <div class="form-group col-md-4">
       <label class="usedQuantity">ຈຳນວນ</label>
-      <input type="number" class="form-control text-right" formControlName="usedQuantity" required>
+      <input type="number" class="form-control text-right" formControlName="usedQuantity" required
+        (change)="onQuantityChanged()">
     </div>
     <div class="form-group col-md-4">
       <label class="unitId">ຫົວໜ່ວຍ</label>
@@ -22,6 +23,31 @@
         <option value="{{ u.id }}" *ngFor="let u of units">{{ u.unit_name }}</option>
       </select>
     </div>
+    <div class="form-group col-md-4">
+      <label class="src_price">ລາຄາຕໍ່ໜ່ວຍ</label>
+      <input type="number" class="form-control text-right" formControlName="src_price" required
+        (change)="onQuantityChanged()">
+    </div>
+    <div class="form-group col-md-4">
+      <label class="src_currCodeId">ສະກຸນເງິນ</label>
+      <select class="form-control" id="src_currCodeId" formControlName="src_currCodeId"
+        (change)="getCurrencyRate($event.target.value)">
+        <option value="" disabled>-- Choose --</option>
+        <option value="{{ c.id }}" *ngFor="let c of currencies">{{ c.currency_name }}</option>
+      </select>
+    </div>
+    <div class="form-group col-md-4">
+      <label class="exchange_rate">Rate</label>
+      <input type="number" class="form-control text-right" formControlName="exchange_rate" required>
+    </div>
+    <div class="form-group col-md-4">
+      <label class="convertedAmount">ຍອດລວມ ກີບ</label>
+      <input type="number" class="form-control text-right" formControlName="convertedAmount" required>
+    </div>
+
+
+
+
   </div>
 </form>
 <hr>
