add item Purchase grid

--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -17,15 +17,10 @@
           <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openRecips()">
             <mat-icon>build</mat-icon>
           </button>
-          <!--
-             <button mat-fab color="primary" class="mr-2" style="background-color: #00BFA5" (click)="openIngredientBuy()">
-            <mat-icon>undo</mat-icon>
+          <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1"
+            routerLink="/ingredientPurchase">
+            <mat-icon>shopping_cart</mat-icon>
           </button>
-          <button mat-fab color="primary" class="mr-2" style="background-color: #800000"
-            (click)="openIngredientTakeOff()">
-            <mat-icon>redo</mat-icon>
-          </button>
-          -->
         </div>
       </div>
     </div>
