--- a/src/app/pages/ingredient-purchase/ingredient-purchase.component.html
+++ b/src/app/pages/ingredient-purchase/ingredient-purchase.component.html
@@ -11,7 +11,8 @@
       </div>
       <div class="card-body">
         <div class="row" style="max-height: 72vh;overflow: auto;">
-          <div class="col col-md-3 mb-1" *ngFor="let item of items" style="cursor: pointer;" (click)="addItemToCart(item)" >
+          <div class="col col-md-3 mb-1" *ngFor="let item of items" style="cursor: pointer;"
+            (click)="addItemToCart(item)">
             <div class="card">
               <div class="card-body">
                 <p class="text-nowrap">{{ item.ingredientName }}</p>
@@ -30,16 +31,34 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="table table-hover">
+          <table class="table table-hover table-bordered">
             <thead class="thead-dark">
-              <th scope="col">#</th>
-              <th scope="col">ວັດຖຸດິບ</th>
-              <th scope="col">ຈຳນວນ</th>
-              <th scope="col">ລາຄາ</th>
-              <th scope="col">ເງິນ</th>
-              <th scope="col">ລວມຍອດ</th>
-              <th scope="col">ຈັດການ</th>
+              <th scope="col" class="text-center">#</th>
+              <th scope="col" class="text-center">ວັດຖຸດິບ</th>
+              <th scope="col" class="text-center">ຈຳນວນ</th>
+              <th scope="col" class="text-center">ລາຄາ</th>
+              <th scope="col" class="text-center">ເງິນ</th>
+              <th scope="col" class="text-center">ລວມຍອດ (ກີບ)</th>
+              <th scope="col" class="text-center">ຈັດການ</th>
             </thead>
+            <tbody>
+              <tr *ngFor="let item of listItems; let i = index">
+                <td class="text-center">{{ i+1 }}</td>
+                <td class="text-left">{{ item.ingredientName }}</td>
+                <td class="text-right" (click)="openQuantity(item)">{{ item.quantity | number }} {{ item.unit_name }}
+                </td>
+                <td class="text-right">{{ item.unitPrice | number }}</td>
+                <td class="text-center">{{ item.currency_name }}</td>
+                <td class="text-right">{{ item.total |number }}</td>
+                <td class="text-center">
+                  <span>
+                    <i class="material-icons" style="color: #C60001;cursor: pointer;" (click)="removeItem(item)">
+                      cancel
+                    </i>
+                  </span>
+                </td>
+              </tr>
+            </tbody>
           </table>
         </div>
       </div>
