--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -56,7 +56,7 @@
                 <td class="text-center">{{ item.unit_name }}</td>
                 <td class="text-right">{{ item.unitPrice | number }} ກີບ</td>
                 <td class="text-right">{{ item.quantityPerUnit | number }} {{ item.unit_name }}</td>
-                <td class="text-right">{{ item.unitPerPack | number }} {{ item.unit_name }}</td>
+                <td class="text-right">{{ item.unitPerPack | number }} {{ item.packUnitName }}</td>
                 <td class="text-right">{{ item.packPrice | number }} ກີບ</td>
                 <td class="text-center">{{ item.packUnitName  }}</td>
                 <td class="text-right">{{ item.currentQuantity | number }} {{ item.unit_name }}</td>
